--- a/build.gradle
+++ b/build.gradle
@@ -46,3 +46,8 @@ dependencyManagement {
 tasks.named('test') {
     useJUnitPlatform()
 }
+
+bootJar {
+    archiveBaseName = 'app'
+    archiveVersion = ''
+}
