--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.application.name=hello-spring-ai
-spring.ai.ollama.chat.options.model=llama3
+spring.ai.ollama.chat.options.model=gemma2:27b
 spring.ai.ollama.base-url=http://${OLLAMA_HOST}:11434
